// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox.ts should be disabled 1`] = `
<input aria-checked="false"
       disabled
       id="input-122"
       role="checkbox"
       type="checkbox"
>
`;

exports[`VCheckbox.ts should be render colored checkbox 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i aria-hidden="true"
           class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
        >
        </i>
        <input aria-checked="false"
               id="input-128"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should render themed component 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i aria-hidden="true"
           class="v-icon notranslate mdi mdi-checkbox-blank-outline theme--light"
        >
        </i>
        <input aria-checked="false"
               id="input-116"
               role="checkbox"
               type="checkbox"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should use custom icons 1`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i aria-hidden="true"
           class="v-icon notranslate material-icons theme--light"
        >
        </i>
        <input aria-checked="mixed"
               id="input-110"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should use custom icons 2`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i aria-hidden="true"
           class="v-icon notranslate material-icons theme--light"
        >
        </i>
        <input aria-checked="mixed"
               id="input-110"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;

exports[`VCheckbox.ts should use custom icons 3`] = `
<div class="v-input theme--light v-input--selection-controls v-input--checkbox v-input--indeterminate">
  <div class="v-input__control">
    <div class="v-input__slot">
      <div class="v-input--selection-controls__input">
        <i aria-hidden="true"
           class="v-icon notranslate material-icons theme--light"
        >
        </i>
        <input aria-checked="mixed"
               id="input-110"
               role="checkbox"
               type="checkbox"
               value="fizz"
        >
        <div class="v-input--selection-controls__ripple">
        </div>
      </div>
    </div>
    <div class="v-messages theme--light">
      <div class="v-messages__wrapper">
      </div>
    </div>
  </div>
</div>
`;
